--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,3 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.android.support:design:24.2.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
