--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
             android:name=".LoginActivity"
             android:label="@string/app_name" >
         </activity>
+
         <activity
             android:name=".WhereAmIAt"
             android:label="@string/title_activity_where_am_iat"
@@ -48,6 +49,13 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".RankActivity"
+            android:label="@string/app_name" >
+        </activity>
+
+
 
     </application>
 
