--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,8 +54,10 @@
         </activity>
         <activity
             android:name=".RankActivity"
-            android:label="@string/app_name"></activity>
-        <activity android:name=".Friends"></activity>
+            android:label="@string/rank" />
+        <activity
+            android:name=".Friends"
+            android:label="@string/friends"/>
     </application>
 
 </manifest>
