--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,11 @@
         </activity>
 
         <activity
+            android:name=".OnboardingActivity"
+            android:label="@string/app_name" >
+        </activity>
+
+        <activity
             android:name=".WhereAmIAt"
             android:label="@string/title_activity_where_am_iat"
             android:theme="@style/AppTheme.NoActionBar" >
@@ -34,11 +39,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true" >
