--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,11 +29,6 @@
             android:name=".WhereAmIAt"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar2">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name="com.facebook.FacebookActivity"
@@ -70,7 +65,13 @@
             android:label="@string/title_activity_maps" />
         <activity
             android:name=".RankActivity"
-            android:label="@string/rank" />
+            android:label="@string/rank" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".Friends"
             android:label="@string/friends" />
